chore: Update CircleCI pipeline to clone GitHub repository using powershell.exe

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -34,6 +34,7 @@ jobs:
             # - checkout
             - run:
                 name: Clone GitHub repository
+                shell: powershell.exe
                 command: |
                   git clone << pipeline.project.git_url >> .
                   git fetch --tags
