chore: Update CircleCI pipeline to clone and checkout branch or tag using bash

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -36,12 +36,12 @@ jobs:
                 name: Clone GitHub repository
                 command: |
                   # bash
-                  $TAG=<< pipeline.git.tag >>
-                  $BRANCH=<< pipeline.git.branch >>
+                  TAG="<< pipeline.git.tag >>"
+                  BRANCH="<< pipeline.git.branch >>"
                   if [ -n "$TAG" ]; then
-                    $BRANCH=$TAG
+                    BRANCH=$TAG
                   fi
-                  git clone << pipeline.project.git_url >> --branch $BRANCH .
+                  git clone "<< pipeline.project.git_url >>" --branch $BRANCH .
             - run:
                 name: "Build Plugins & Run Tests"
                 shell: powershell.exe
