--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -35,7 +35,14 @@ jobs:
             - run:
                 name: Clone GitHub repository
                 command: |
-                  git clone << pipeline.project.git_url >> --branch << pipeline.git.branch >> .
+                  TAG="<< pipeline.git.tag >>"
+                  BRANCH="<< pipeline.git.branch >>"
+                  # If the branch is empty, use the tag as the branch
+                  if [ -z "\$BRANCH" ]; then
+                    BRANCH=\$TAG
+                  fi
+                  echo "Cloning \$BRANCH branch"
+                  git clone << pipeline.project.git_url >> --branch \$BRANCH .
             - run:
                 name: "Build Plugins & Run Tests"
                 shell: powershell.exe
