chore: Update CircleCI configuration to include timeout and error handling for Runner Info job
- Added a timeout of 1 minute to the "Check Runner Info" job.
- Set `fail_on_error` to false and configured the job to always run, improving the robustness of the CI pipeline.

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -23,6 +23,9 @@ jobs:
           name: "Check Runner Info"
           shell: powershell.exe
           command: echo "Hi I'm on Runners!"
+          timeout: 1m
+          fail_on_error: false
+          when: always
 
   unreal-windows:
     machine: true
