chore: Update CircleCI configuration to include new parameters and orb version
- Upgraded `path-filtering` orb from version 1.0.0 to 1.2.0 for improved functionality.
- Added `run-on-windows` parameter to both main and continue configuration files, allowing for conditional job execution based on the pipeline parameter.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,13 @@
 version: 2.1
 setup: true
 orbs:
-  path-filtering: circleci/path-filtering@1.0.0
+  path-filtering: circleci/path-filtering@1.2.0
+
+# Define parameters that will be available in all workflows
+parameters:
+  run-on-windows:
+    type: boolean
+    default: false
 
 workflows:
   generate-config:
