chore: Simplify CircleCI Runner Info job configuration
- Removed conditional execution for the "Check Runner Info" job, ensuring it always runs.
- Maintained the existing timeout and error handling settings for improved CI pipeline reliability.

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -22,15 +22,13 @@ jobs:
     machine: true
     resource_class: openxrlab/xrfeitoria
     steps:
-      - when:
-          condition: << pipeline.parameters.run-on-windows >>
-          steps:
-            - run:
-                name: "Check Runner Info"
-                shell: powershell.exe
-                command: echo "Hi I'm on Runners!"
-                timeout: 1m
-                fail_on_error: false
+      - run:
+          name: "Check Runner Info"
+          shell: powershell.exe
+          command: echo "Hi I'm on Runners!"
+          timeout: 1m
+          fail_on_error: false
+          when: always
 
   unreal-windows:
     machine: true
