chore: Update CircleCI configuration for streamlined testing
- Changed the configuration path in the main CircleCI config to use a lighter version for the workflow.
- Added a new full configuration file for comprehensive testing on Windows and Linux runners.
- Introduced a new lite configuration file focused on Linux testing, optimizing the CI setup.

--- a/.circleci/continue_config_full.yml
+++ b/.circleci/continue_config_full.yml
@@ -1,3 +1,5 @@
+# This config is used for the CircleCI workflow to run the tests on the Windows and Linux runners
+# Windows runner needs to be self-hosted
 version: 2.1
 
 parameters:
